--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
-    backendServiceArm: 'Azure_Subscription_Connection'
+    backendServiceArm: 'azure-devops'
     backendAzureRmOverrideSubscriptionID: '3fb059b8-93d4-4b42-b323-c4fe44b4b3c7'
     backendAzureRmResourceGroupName: 'Backend_RG'
     backendAzureRmStorageAccountName: 'terraformstorage568547'
@@ -35,4 +35,4 @@ steps:
     provider: 'azurerm'
     command: 'apply'
     commandOptions: '--auto-approve'
-    environmentServiceNameAzureRM: 'Azure_Subscription_Connection'
+    environmentServiceNameAzureRM: 'azure-devops'
