--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,9 +10,8 @@ pool:
   vmImage: ubuntu-latest
 
 variables:
-  resource_group_name: 'storagerg'
-  location: 'eastus'
-  storage_account_name: 'mystgihdgtrjkkgjbjkgd'
+- group: TerraformBackendConfig
+- group: Input_Variables
 
 steps:
 - task: TerraformInstaller@1
@@ -23,16 +22,15 @@ steps:
   inputs:
     provider: 'azurerm'
     command: 'init'
-    backendServiceArm: 'azure-devops'
-    backendAzureRmOverrideSubscriptionID: '3fb059b8-93d4-4b42-b323-c4fe44b4b3c7'
-    backendAzureRmResourceGroupName: 'Backend_RG'
-    backendAzureRmStorageAccountName: 'terraformstorage568547'
-    backendAzureRmContainerName: 'terraform'
-    backendAzureRmKey: 'terraform.tfstate'
+    backendServiceArm: '$(service_Connection)'
+    backendAzureRmResourceGroupName: '$(backendResourceGroup)'
+    backendAzureRmStorageAccountName: '$(backendStorageAccount)'
+    backendAzureRmContainerName: '$(backendContainer)'
+    backendAzureRmKey: '$(backendStateFile)'
 
 - task: TerraformTask@5
   inputs:
     provider: 'azurerm'
     command: 'apply'
     commandOptions: '--auto-approve'
-    environmentServiceNameAzureRM: 'azure-devops'
+    environmentServiceNameAzureRM: '$(service_Connection)'
